Fix BQ editor getting extra padding

--- a/src/scripts/components/EditorOverlay.scss
+++ b/src/scripts/components/EditorOverlay.scss
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  padding: 0;
 
   &.move-down {
     z-index: 59;
